--- a/C/Exercise/rentCar/Makefile
+++ b/C/Exercise/rentCar/Makefile
@@ -3,26 +3,26 @@ CFLAGS = -Wall -Wextra -g
 LDFLAGS = -lcheck -lm -lsubunit
 
 # Files
-SRC = noleggioUtils.c
-HEADERS = noleggioUtils.h
+SRC = noleggio.c
+HEADERS = noleggio.h
 MAIN = main.c
-#TEST = test_math_utils.c
 
-all: main test run_main run_test
+
+all: main run_main 
 
 main: $(SRC) $(MAIN)
 	$(CC) $(CFLAGS) -o main $(SRC) $(MAIN)
 
-#test: $(SRC) $(TEST)
-#	$(CC) $(CFLAGS) -o test $(SRC) $(TEST) $(LDFLAGS)
+test: $(SRC) $(TEST)
+	$(CC) $(CFLAGS) -o test $(SRC) $(TEST) $(LDFLAGS)
 
 run_main: main
 	@echo "Running Main Program:"
 	./main
 
-#run_test: test
-#	@echo "Running Tests:"
-#	./test
+run_test: test
+	@echo "Running Tests:"
+	./test
 
 clean:
 	rm -f main test
